@@ -27,14 +27,6 @@
     - "*.yaml"
     - "*.rc"
     - "*.erb"
-:rspec: 
-  :full_backtraces: false
-  :ruby_options: 
-  - -I.
-:ruby: 
-  :main_program: bin/ruber
-  :ruby_options: 
-  - -Ilib
 :rake: 
   :rakefile: Rakefile.rb
   :ruby_options: []
@@ -58,3 +50,11 @@
     spec: 
     - Run all examples
     - 
+:ruby: 
+  :main_program: bin/ruber
+  :ruby_options: 
+  - -Ilib
+:rspec: 
+  :full_backtraces: false
+  :ruby_options: 
+  - -I.
